Update hover styling on user profile container

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -83,6 +83,9 @@ input[type=text]:focus, input[type=email]:focus {
         display: block;
     }
 }
+.profile:hover {
+    border: 1px #aecbfa solid;
+}
 
 
 .online-users-heading {
