--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -74,6 +74,9 @@ input[type=text]:focus, input[type=email]:focus {
     margin: 0 auto;
     display: block; }
 
+.profile:hover {
+  border: 1px #aecbfa solid; }
+
 .online-users-heading {
   color: #aecbfa;
   margin-bottom: 5px; }
